--- a/knots/presentation.tex
+++ b/knots/presentation.tex
@@ -19,6 +19,7 @@
 \usepackage{caption}
 \captionsetup[figure]{labelformat=empty}% redefines the caption setup of the figures environment in the beamer class.
 \usepackage{tikz}
+\usetikzlibrary{positioning}
 
 \usepackage{listings}%
 
@@ -36,19 +37,31 @@
   \endgroup
 }
 
+%%%%%%%%% Colors of Beamer Layout %%%%%%%%%%%%%
+\newcommand{\myorange}{Orange}
+\newcommand{\mygreen}{DarkGreen}
+\newcommand{\mycyan}{LightSeaGreen}
+\newcommand{\myred}{RubineRed}
+\newcommand{\myyellow}{Goldenrod}
+\newcommand{\myblue}{RoyalBlue}
+
 %%%%%%%%% Begin of Beamer Layout %%%%%%%%%%%%%
 \ProcessOptionsBeamer
 \usecolortheme{whale}
-\usecolortheme[named=DarkGreen]{structure}
+\usecolortheme[named=\myblue]{structure}
 \useinnertheme{rounded}
 \useoutertheme{infolines}
+
+
 \setbeamertemplate{footline}[frame number]
 \setbeamertemplate{headline}[default]
 \setbeamertemplate{navigation symbols}{}
 \setbeamertemplate{itemize items}[circle]
 \defbeamertemplate*{headline}{info theme}{}
 \defbeamertemplate*{footline}{info theme}{\leavevmode%
-\hbox{%
+
+
+  \hbox{%
 \begin{beamercolorbox}[wd=.2\paperwidth,ht=2.25ex,dp=1ex,center]{author in head/foot}%
 \usebeamerfont{author in head/foot}\insertshortauthor
 \end{beamercolorbox}%
@@ -59,16 +72,12 @@
 \usebeamerfont{section in head/foot}\insertframenumber{}~/~\inserttotalframenumber\hspace*{2ex}
 \end{beamercolorbox}
 }\vskip0pt}
-\setbeamercolor*{block title example}{fg=LightSeaGreen}
-\AtBeginEnvironment{exampleblock}{\setbeamercolor{itemize item}{fg=LightSeaGreen}}
-\setbeamercolor*{block title alerted}{fg=DarkOrange2}
-\AtBeginEnvironment{alertblock}{\setbeamercolor{itemize item}{fg=DarkOrange2}}
+\setbeamercolor*{block title example}{fg=\myorange}
+\AtBeginEnvironment{exampleblock}{\setbeamercolor{itemize item}{fg=\myorange}}
+\setbeamercolor*{block title alerted}{fg=\myred}
+\AtBeginEnvironment{alertblock}{\setbeamercolor{itemize item}{fg=\myred}}
 \setbeamertemplate{footline}[info theme]
 \defbeamertemplate{description item}{align left}{\insertdescriptionitem\hfill}
-%%%%%%%%% End of Beamer Layout %%%%%%%%%%%%%
-\newcommand{\myorange}{DarkOrange2}
-\newcommand{\mygreen}{DarkGreen}
-\newcommand{\mycyan}{LightSeaGreen}
 
 
 \lstset{%
@@ -100,320 +109,255 @@
    \setcounter{framenumber}{\value{finalframe}}
 }
 
-\DeclareMathOperator{\diam}{diam}
-\DeclareMathOperator{\tw}{tw}
+\newcommand{\Imin}{\ensuremath{\rm{I}^-}\xspace}
+\newcommand{\Ipl}{\ensuremath{\rm{I}^+}\xspace}
+%\newcommand{\Imove}{\ensuremath{\rm{I}}}
+\newcommand{\I}{\ensuremath{\rm{I}}\xspace}
+\newcommand{\II}{\ensuremath{\rm{II}}\xspace}
+\newcommand{\III}{\ensuremath{\rm{III}}\xspace}
+\newcommand{\IImin}{\ensuremath{\rm{II}^-}\xspace}
+\newcommand{\IIpl}{{\ensuremath{\rm{II}^+}}\xspace}
 
+
+\DeclareMathOperator{\defect}{def}
 \begin{document}
 
-\title{Kempe recoloring version of Hadwiger's conjecture}
+\title{Parameterized complexity of untangling knots}
 \author[Clément Legrand]{Clément Legrand-Duchesne}
 \institute{LaBRI, Bordeaux}
 %\date{\today}
-\date{\today}
+\date{July 4, 2022}
 
 \begin{frame}
   \titlepage
+  \begin{center}
+  Joint work with Ashutosh Rai and Martin Tancer.
+  \end{center}
 
-  Joint work with Marthe Bonamy, Marc Heinrich and Jonathan Narboni
 \end{frame}
 
-\section*{Some context}
-\begin{frame}{Recoloring with Kempe changes}
-  \uncover<1->{
-  \begin{columns}
-    \begin{column}{.66\textwidth}
-      \begin{exampleblock}{Kempe chain (1879)}
-        Maximal bichromatic connected component in $G$
-      \end{exampleblock}
-    \end{column}
-    \begin{column}{.33\textwidth}
-      \centering
-      \begin{tikzpicture}
-        \node[draw=black,fill=\myorange,circle,inner sep=2pt]   (a) at (90:.8cm) {};
-        \node[draw=black,fill=\mycyan,circle,inner sep=2pt]  (b) at (162:.8cm) {};
-        \node[draw=black,fill=magenta,circle,inner sep=2pt] (c) at (234:.8cm) {};
-        \node[draw=black,fill=blue,circle,inner sep=2pt] (d) at (306:.8cm) {};
-        \node[draw=black,fill=magenta,circle,inner sep=2pt] (e) at (18:.8cm) {};
+\section*{Knot theory background}
 
-        \draw (a) -- (b) -- (c) -- (d) -- (e) -- (a);
-      \end{tikzpicture}
-      
-      %\includegraphics[width=.8\textwidth]{../figures/pdf/knot_example.pdf}
+\begin{frame}{Untangling problem}
+  \begin{columns}
+    \begin{column}{.25\textwidth}
+      \centering
+      \includegraphics[width=.5\textwidth]{diagram_example.pdf}
+    \end{column}
+    \begin{column}{.75\textwidth}
+      \centering
+      \uncover<2->{
+      \includegraphics[width=.8\textwidth]{rm.pdf}}
     \end{column}
   \end{columns}
-  }
 
-  \vspace{1.5cm}
-  
-  \begin{columns}
-    \uncover<2->{
-      \begin{column}{.33\textwidth}
-        \centering
-        \begin{tikzpicture}
-          \node[draw=black,fill=\myorange,circle,inner sep=2pt]   (a) at (90:.8cm) {};
-          \node[draw=black,fill=\mycyan,circle,inner sep=2pt]  (b) at (162:.8cm) {};
-          \node[draw=black,very thick,fill=blue,circle,inner sep=2pt] (c) at (234:.8cm) {};
-          \node[draw=black,very thick,fill=magenta,circle,inner sep=2pt] (d) at (306:.8cm) {};
-          \node[draw=black,very thick,fill=blue,circle,inner sep=2pt] (e) at (18:.8cm) {};
+  \uncover<3->{
+  \begin{block}{Alexander, Briggs 1926}
+    All diagrams of a knot are equivalent up to a series of Reidemeister moves
+  \end{block}
 
-          \draw (e) -- (a) -- (b) -- (c);
-          \draw[very thick] (c) -- (d) -- (e);
-        \end{tikzpicture}      
-    \end{column}
-    }
+  \begin{block}{Lackenby 2015}
+    Any diagram of the unknot can be untangled with a polynomial number of moves
+  \end{block}
+
+  \begin{block}{de Mesmay, Rieck, Sedgwick and Tancer 2021}
+    Shortest Untangling is NP-complete 
+  \end{block}}
+\end{frame}
+
+\section*{Parameterized complexity background}
+
+\begin{frame}{Main Parameterized complexity classes}
+  Idea: express the complexity with regard to the size \textcolor{\myblue}{$n$} and a parameter \textcolor{\myorange}{$k$}
+
+  \vspace{.4cm}
+  \begin{center}
+  \begin{tikzpicture}
+    \pgfmathsetlengthmacro{\yoff}{1cm}%
     \uncover<3->{
-    \begin{column}{.33\textwidth}
-       \centering
-      \begin{tikzpicture}
-        \node[draw=black,fill=\myorange,circle,inner sep=2pt]   (a) at (90:.8cm) {};
-        \node[draw=black,very thick,fill=magenta,circle,inner sep=2pt]  (b) at (162:.8cm) {};
-        \node[draw=black,very thick,fill=\mycyan,circle,inner sep=2pt] (c) at (234:.8cm) {};
-        \node[draw=black,fill=blue,circle,inner sep=2pt] (d) at (306:.8cm) {};
-        \node[draw=black,fill=magenta,circle,inner sep=2pt] (e) at (18:.8cm) {};
+    \draw [thick, fill=gray!10] (0,1.7*\yoff) circle[x radius=1.5cm, y
+      radius=3cm] ++(0,2.7*\yoff) node (xp) {XP};}
 
-        \draw[very thick] (b) -- (c);
-        \draw (a) -- (b);
-        \draw (c) -- (d) -- (e) -- (a);
-      \end{tikzpicture}
-    \end{column}
-    }
     \uncover<4->{
-    \begin{column}{.33\textwidth}
-       \centering
-      \begin{tikzpicture}
-        \node[draw=black,fill=\myorange,circle,inner sep=2pt]   (a) at (90:.8cm) {};
-        \node[draw=black,fill=\mycyan,circle,inner sep=2pt]  (b) at (162:.8cm) {};
-        \node[draw=black,fill=magenta,circle,inner sep=2pt] (c) at (234:.8cm) {};
-        \node[draw=black,very thick,fill=\mycyan,circle,inner sep=2pt] (d) at (306:.8cm) {};
-        \node[draw=black,fill=magenta,circle,inner sep=2pt] (e) at (18:.8cm) {};
+    \draw [thick, fill=gray!50] (0,1.5*\yoff) circle[x radius=1.3cm, y
+      radius=2.6cm] ++(0,2*\yoff) node (wp) {W[P]};
+    \node (dots) at (0,2.5*\yoff) {$\vdots$};}
 
-        \draw (a) -- (b) -- (c) -- (d) -- (e) -- (a);
-      \end{tikzpicture}
-    \end{column}
-    }
-  \end{columns}
+    \uncover<2->{
+    \draw [thick, fill=gray!90] (0,0.6*\yoff) circle[x radius=1cm, y
+      radius=1.5cm] ++(0,1*\yoff) node{W[2]};
+    \draw [thick, fill=gray!130] (0,0.2*\yoff) circle[x radius=.7cm, y
+      radius=.9cm] ++(0,0.5*\yoff) node (w1) {W[1]};}
+    \node[right = -.4cm of w1] (w1bis) {};
+
+    \draw [thick, fill=gray!170] (0,0) circle[x radius=.5cm, y radius=.5cm] node
+    (fpt) {FPT}; 
+
+    \pgfmathsetlengthmacro{\xoff}{1.8cm}%
+
+
+    \node (legendfpt) at (\xoff,0) {};
+    \node[right =.2cm of legendfpt,align=left] (compfpt) {$O(\textcolor{\myorange}{f(k)}\cdot\textcolor{\myblue}{P(n)})$};
+    \node[align = left,right] at (3*\xoff, 0.3cm) {SAT with \textcolor{\myorange}{$k$} variables};
+    \node[align = left,right] at (3*\xoff, -0.3cm) {vertex cover of size \textcolor{\myorange}{$k$}};
+    \draw[thick,->] (legendfpt) -- (fpt);
+
+    \uncover<2->{
+      \node (legendw1) at (\xoff,1.5*\yoff) {};
+      \node[right =.2cm of legendw1, align=left] (compw1) {defined with \\ combinatorial\\ circuits};
+      \node[align = left,right] at (3*\xoff, 1.5*\yoff){independent set of size \textcolor{\myorange}{$k$}};
+      \draw[thick,->] (legendw1) -- (w1bis);}
+
+    \uncover<3->{
+      \node (legendxp) at (\xoff,4.4*\yoff) {};
+      \node[right =.2cm of legendxp, align=left] (compxp) {$O(\textcolor{\myblue}{n}^{\textcolor{\myorange}{f(k)}})$};
+      \node[align = left, right] at (3*\xoff, 4.4*\yoff){Non-empty
+        intersection\\
+      of \textcolor{\myorange}{$k$} tree-automatas};
+
+      \node[right =.2cm of legendxp] {};
+      \draw[thick,->] (legendxp) -- (xp);}
+
+    \uncover<4>{
+      \node (legendwp) at (\xoff,3*\yoff) {};
+      \node[right =.2cm of legendwp, align = left] {non-deterministic : $O(\textcolor{\myorange}{h(k)}\cdot\textcolor{\myblue}{\log(n)})$\\
+      + deterministic : $O(\textcolor{\myorange}{f(k)}\cdot\textcolor{\myblue}{P(n)})$};
+      \draw[thick,->] (legendwp) -- (wp);}
+      
+  \end{tikzpicture}
+  \end{center}
 \end{frame}
 
-\begin{frame}{Natural questions in reconfiguration}
-  \begin{exampleblock}{Reconfiguration graph}
-    \begin{itemize}
-    \item $V(R^k(G)) =$ $k$-colorings of $G$.
-    \item $\alpha$ and $\beta$ adjacent  if $\alpha
-      \xleftrightarrow[\text{Kempe}]{} \beta$
-    \end{itemize}
-  \end{exampleblock}
+\section*{Parameterized complexity of untangling}
 
-  \setbeamertemplate{description item}[align left] 
+\begin{frame}{Choice of the parameter}
+  \centering
+  \includegraphics[width=.6\textwidth]{rm.pdf}
+  
+  \begin{block}{Parameterized by size of the sequence}
+    Instances of bounded size $\leadsto$ linear kernel, trivially FPT
+  \end{block}
+
+  \uncover<2>{
+  \begin{block}{Parameterized by defect}
+    $$\defect(S) = 2|S| - n \quad \quad \defect(D) = \min_{S} \defect(S)$$
+    \vspace{-.3cm}
+    \begin{itemize}
+    \item ``counts'' the number non-optimal moves
+      $$\defect(S) = \sum_{m \in S} w(m) \quad \quad
+      \begin{tabular}{|c|c|c|c|c|c|}
+        \hline
+        type of move & \IImin & \Imin & \III  & \Ipl & \IIpl \\
+        \hline
+        weight & 0 & 1 & 2 & 3 & 4\\
+        \hline
+      \end{tabular}$$
+    \item instances of unbounded size
+    \item key ingredient in the NP-hardness proof
+    \end{itemize}
+  \end{block}}
+\end{frame}
+
+\begin{frame}{Parameterized complexity of untangling}
+  \begin{block}{L., Rai, Tancer 22+}
+    Shortest untangling parameterized by defect is W[P]-complete
+  \end{block}
+
+  \begin{block}{W[P]- membership}
+    Key observation: \IImin can be performed greedily !
+  \end{block}
+  
+  \begin{block}{W[P]-hardness}
+    Reduction from Minimum axiom set
+  \end{block}
+\end{frame}
+
+\section*{Swapping moves and W[P]-membership}
+
+\begin{frame}{\IImin moves can be performed greedily}
+
+  \begin{block}{Untangle$(D,k)$:}
+    \vspace{-.4cm}
+      \begin{overlayarea}{\linewidth}{0.4\textheight}
+      \begin{itemize}
+      \item<4-> Non-deterministic choose a set of special crossing $X$
+      \item if $k <0$ return NO; if $k = 0$ and $D = U$ return YES;
+      \item<2->Deterministic: if there exist a \only<4->{\textbf{greedy} }feasible \IImin move $m$,
+        return Untangle$(D(m) , k - w(m))$\\
+      \item Non-deterministic: perform any possible Reidemeister move $m$
+        \only<4->{\textbf{involving crossings in $X$}} and return Untangle$(D(m),k
+        -w(m))$
+      \end{itemize}
+      \end{overlayarea}
+  \end{block}
+  
+  \begin{overlayarea}{\linewidth}{0.5\textheight}
+    \only<3>{
+      \vspace{-.8cm}
+      \begin{block}{Kauffman, Lambropoulou}
+        \centering
+        \includegraphics[width=.3\linewidth]{culprit.pdf}
+      \end{block}}
+    \only<5>{
+      \begin{block}{Key lemma}
+        If $S$ untangles $D$ with defect $k$ and there is a greedy feasible
+        \IImin move
+        $m$, then there exist a sequence of defect $k$, starting by $m$ and
+        untangling $D$.
+    \end{block}}
+  \end{overlayarea}
+\end{frame}
+
+\section*{W[P]-hardness}
+
+\begin{frame}{Reduction from mimimum axiom set}
+  \begin{block}{FPT-reduction}
+    \begin{itemize}
+    \item $(x,k) \leadsto (x',k')$ in time $O(f(k)P(|x|))$
+    \item $k' \le g(k)$
+    \end{itemize}
+  \end{block}
+  
+  \begin{block}{Minimum Axiom Set}
   \begin{description}
-  \item[Reachability] Are $\alpha$ and $\beta$ Kempe-equivalent ? 
-  \item[Connectivity] Is $R^k(G)$ connected ?
-  \item[Diameter] Estimate $\diam(R^k(G))$ ?
+  \item[Input] A finite set of variables $\mathcal{S} = \{s_1, \dots s_p\}$\\
+    A finite set of relations $\mathcal{R}$ of the form $(T,t)$ with $T \subset
+    \mathcal{S}$ and $t \in \mathcal{S}$
+  \item[Parameter] $k$
+  \item[Ouput] Does there exist $S_0 \subset \mathcal{S}$ of size $k$ such that
+    the sequence $$S_{i+1} = S_i \cup \{t | T \subset S_i \text{ with } (T,t)
+    \in \mathcal{R}\}$$ verifies $\bigcup_{i=0}^\infty S_i = \mathcal{S}$ ?
   \end{description}
-
-  \begin{block}{Application}
-    \begin{itemize}
-    \item Powerful tool (ex: Vizing theorem)
-    \item Sampling coloring with a Markov chain
-    \end{itemize}
-  \end{block}
+\end{block}
 \end{frame}
 
-\begin{frame}{Graph minor}
-  \begin{exampleblock}{Graph minor}
-    $H$ is a minor of $G$ if $H$ can be obtained be deleting vertices, edges and
-    contracting edges of $G$
-  \end{exampleblock}
-
+\begin{frame}{Sketch of the reduction}
+  \begin{block}{Brunnian link}
+    Non-trivial link that becomes trivial if any of its components is removed
+  \end{block}
   \begin{columns}
-    \begin{column}{.48\textwidth}
+    \begin{column}{.47\linewidth}
       \centering
-      \begin{tikzpicture}
-        \node[draw=\myorange,fill=\myorange,circle,inner sep=1.5pt]   (a1) at (75:.8cm) {};
-        \node[draw=\myorange,fill=\myorange,circle,inner sep=1.5pt]   (a2) at (105:.8cm) {};
-        \node[draw=\myorange,fill=\myorange,circle,inner sep=1.5pt]   (a) at (90:.45cm) {};
-        \node[draw=\mycyan,fill=\mycyan,circle,inner sep=1.5pt]  (b) at (147:.8cm) {};
-        \node[draw=\mycyan,fill=\mycyan,circle,inner sep=1.5] (b2) at   (177:.8cm) {};
-        \node[draw=magenta,fill=magenta,circle,inner sep=1.5pt] (c) at (234:.8cm) {};
-        \node[draw=blue,fill=blue,circle,inner sep=1.5pt] (d) at (291:.8cm) {};
-        \node[draw=blue,fill=blue,circle,inner sep=1.5pt] (d2) at (321:.8cm) {};
-        \node[draw=blue,fill=blue,circle,inner sep=1.5pt] (d3) at (306:.45cm) {};
-        \node[draw=yellow,fill=yellow,circle,inner sep=1.5pt] (e) at (18:.8cm) {};
-
-        \draw (a2) -- (b) -- (d3) (e) -- (b2) -- (c) -- (a2) (a1) -- (e) -- (d2)
-        (d3) -- (a) (e) -- (c) -- (d); \draw[very thick,\mycyan] (b) -- (b2);
-        \draw[very thick,blue] (d) -- (d2) -- (d3); \draw[very thick,\myorange]
-        (a) -- (a1) -- (a2);
-      \end{tikzpicture}
+      \includegraphics[width=1\linewidth]{rubberband.pdf}
     \end{column}
     \hfill
-    \begin{column}{.48\textwidth}
+    \uncover<2->{
+    \begin{column}{.52\linewidth}
       \centering
-      \begin{tikzpicture}
-        \node[draw=\myorange,fill=\myorange,circle,inner sep=1.5pt]   (a) at (90:.8cm) {};
-        \node[draw=\mycyan,fill=\mycyan,circle,inner sep=1.5pt]  (b) at (162:.8cm) {};
-        \node[draw=magenta,fill=magenta,circle,inner sep=1.5pt] (c) at (234:.8cm) {};
-        \node[draw=blue,fill=blue,circle,inner sep=1.5pt] (d) at (306:.8cm) {};
-        \node[draw=yellow,fill=yellow,circle,inner sep=1.5pt] (e) at (18:.8cm) {};
-
-        \draw (c) -- (e) -- (b) -- (d) --(a) -- (b) -- (c) -- (a) -- (e) -- (d) --  (c) -- (d) ;
-      \end{tikzpicture}
-    \end{column}
+      \includegraphics[width=1\linewidth]{rubberband_doubled.pdf}
+     \end{column}}
   \end{columns}
-  
-  $K_k$ is a minor of $G$ if and only if $V_1 \sqcup \dots \sqcup V_k \subseteq
-  V(G)$, with $V_i$ connected and $G[V_1, \dots V_k] = K_k$ 
-
-  \uncover<2>{
-  \begin{block}{Wagner, Kuratowski 1930}
-    A graph is planar iff $K_5$-minor and $K_{3,3}$-minor free
-  \end{block}
-
-    \begin{columns}
-    \begin{column}{.48\textwidth}
-      \centering
-      \begin{tikzpicture}
-        \node[draw=black,fill=black,circle,inner sep=1.5pt]   (a) at (90:.8cm) {};
-        \node[draw=black,fill=black,circle,inner sep=1.5pt]  (b) at (162:.8cm) {};
-        \node[draw=black,fill=black,circle,inner sep=1.5pt] (c) at (234:.8cm) {};
-        \node[draw=black,fill=black,circle,inner sep=1.5pt] (d) at (306:.8cm) {};
-        \node[draw=black,fill=black,circle,inner sep=1.5pt] (e) at (18:.8cm) {};
-
-        \draw (a) -- (b) -- (c) -- (d) -- (e) -- (a) -- (c) -- (e) -- (b) -- (d)
-        -- (a);
-      \end{tikzpicture}
-    \end{column}
-    \hfill
-    \begin{column}{.48\textwidth}
-      \centering
-      \begin{tikzpicture}[auto,node distance=1cm]
-      \node[draw=black,fill=black,circle,inner sep=1.5pt] (a) {};
-      \node[draw=black,fill=black,circle,inner sep=1.5pt] (b) [right of=a] {};
-      \node[draw=black,fill=black,circle,inner sep=1.5pt] (c) [right of=b] {};
-      \node[draw=black,fill=black,circle,inner sep=1.5pt] (A) [below of=a] {};
-      \node[draw=black,fill=black,circle,inner sep=1.5pt] (B) [below of=b] {};
-      \node[draw=black,fill=black,circle,inner sep=1.5pt] (C) [below of=c] {};
-
-      \draw (a) -- (A) (a) --(B) (a) -- (C);
-      \draw (b) -- (A) (b) --(B) (b) -- (C);
-      \draw (c) -- (A) (c) --(B) (c) -- (C);
-      \end{tikzpicture}
-    \end{column}
-  \end{columns}}
 \end{frame}
 
-\begin{frame}{Hadwiger's conjecture}
-
-  \begin{block}{Appel, Haken 1976}
-    If $G$ is planar, then $\chi(G) \le 4$
-  \end{block}
-
-  \begin{block}{Robertson, Sanders, Seymour, Thomas 1997}
-    Much simpler proof, but still computer assisted 
-  \end{block}
-  
-  \begin{alertblock}{Hadwiger's conjecture 1943}
-    If $G$ is $K_t$-minor free then $\chi(G) \le t-1$\\
-    Proved for $1 \le t \le 6$, widely open for $t > 6$
-  \end{alertblock}
+\begin{frame}{Sketch of the reduction}
+  \begin{itemize}
+  \item One gadget for every variable
+  \item In each gadget, twist both ends of the components
+  \item Connect
+  \end{itemize}
+  \centering
+ \includegraphics[width=.7\linewidth]{example.pdf} 
 \end{frame}
 
-\section{Recoloring version of Hadwiger's conjecture}
-\begin{frame}{Reconfiguration counterpoint}
-
-  \begin{block}{Meyniel 1978}
-    All 5-colorings of a planar graph are Kempe-equivalent (tight)
-  \end{block}
-
-  \begin{block}{Las Vergnas and Meyniel 1981}
-    All 5-colorings of a $K_5$-minor free graph are Kempe-equivalent
-  \end{block}
-
-  \uncover<2>{
-  \begin{alertblock}{Conjecture 1 [Las Vergnas and Meyniel 1981]}
-    All the $t$-colorings of a $K_t$-minor free graph are Kempe-equivalent
-  \end{alertblock}
-
-  \begin{alertblock}{Conjecture 2 [Las Vergnas and Meyniel 1981]}
-    All the $t$-colorings of a $K_t$-minor free graph are Kempe-equivalent to a $(t-1)$-coloring
-  \end{alertblock}}
-\end{frame}
-
-\begin{frame}{Frozen colorings}
-  \begin{exampleblock}{Frozen coloring}
-    $\alpha$ is frozen if $\forall i,j \le k,$ the graph induced by colors $i$
-    and $j$ is connected
-  \end{exampleblock}
-
-  \begin{columns}
-    \begin{column}{.48\textwidth}
-      \centering      
-      \begin{tikzpicture}
-        \node[draw=black,fill=\myorange,circle,inner sep=1.5pt]   (a) at (90:.3cm) {};
-        \node[draw=black,fill=\mycyan,circle,inner sep=1.5pt]  (b) at (210:.3cm) {};
-        \node[draw=black,fill=magenta,circle,inner sep=1.5pt] (c) at (330:.3cm) {};
-
-        \node[draw=black,fill=magenta,circle,inner sep=1.5pt]   (A) at (90:1cm) {};
-        \node[draw=black,fill=\myorange,circle,inner sep=1.5pt]  (B) at (210:1cm) {};
-        \node[draw=black,fill=\mycyan,circle,inner sep=1.5pt] (C) at (330:1cm) {};
-
-        \draw (a) -- (A);
-        \draw (b) -- (B);
-        \draw (c) -- (C);
-        \draw (a) -- (b) -- (c) -- (a);
-        \draw (A) -- (B) -- (C) -- (A);
-      \end{tikzpicture}
-    \end{column}
-    \hfill
-    \begin{column}{.48\textwidth}
-      \centering
-      \begin{tikzpicture}
-        \node[draw=black,fill=\myorange,circle,inner sep=1.5pt]   (a) at (90:.3cm) {};
-        \node[draw=black,fill=\mycyan,circle,inner sep=1.5pt]  (b) at (210:.3cm) {};
-        \node[draw=black,fill=magenta,circle,inner sep=1.5pt] (c) at (330:.3cm) {};
-
-        \node[draw=black,fill=\mycyan,circle,inner sep=1.5pt]   (A) at (90:1cm) {};
-        \node[draw=black,fill=magenta,circle,inner sep=1.5pt]  (B) at (210:1cm) {};
-        \node[draw=black,fill=\myorange,circle,inner sep=1.5pt] (C) at (330:1cm) {};
-
-        \draw (a) -- (A);
-        \draw (b) -- (B);
-        \draw (c) -- (C);
-        \draw (a) -- (b) -- (c) -- (a);
-        \draw (A) -- (B) -- (C) -- (A);
-      \end{tikzpicture}
-    \end{column}
-  \end{columns}
-  \begin{exampleblock}{Quasi-minor}
-    $K_k$ is quasi-minor of $G$ if there exists $V_1 \sqcup \dots \sqcup V_k$ such
-    that $\forall i \neq j, G[V_i \cup V_j]$ is connected and $G[V_1, \dots V_k]
-    = K_k$
-  \end{exampleblock}
-    Frozen $k$-coloring $\Rightarrow$ quasi $K_k$-minor
-\end{frame}
-
-\begin{frame}{Last conjecture}
-  \begin{alertblock}{Conjecture 3 [Las Vergnas and Meyniel 1981]}
-    No $K_t$-minor $\Rightarrow$ No frozen $t$-coloring
-  \end{alertblock}
-  \begin{block}{Motivation}
-    If $G$ has no $K_t$ minor and all its $t$-colorings are Kempe equivalent
-    then
-    \begin{itemize}
-    \item no frozen $t$-coloring
-    \item only one $t$-coloring up to color permutation
-    \end{itemize}
-  \end{block}
-  \pause
-  \begin{block}{Bonamy, Heinrich, L., Narboni '21+}
-    \begin{itemize}
-    \item Strongly disproved for large $t$: for every $\varepsilon >0$ and large
-      enough $t$, there exists a graph $G$ with a quasi-$K_t$-minor but no
-      $K_{\left(\frac{2}{3} + \varepsilon\right)t}$-minor
-      \pause
-    \item All $\frac{t}{2}$-colorings of a $K_t$-minor free graph are
-      Kempe-equivalent
-    \end{itemize}
-  \end{block}
-\end{frame}
 
 \end{document}
